--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
             <li>Technology Overview: Python, Tkinter</li>
             <li> Proposal Last Updated: 11/5/2022</li>
             <li>Feature List: Basic Clicker Game, Autoclicks, Upgrades</li>
-            <li>Future Feature List: More Upgrades, More purchasables, maybe an ascend restart?</li>
+            <li>Future Feature List: More Upgrades, More purchasables</li>
             <li>Basic Technical Features: Loops, If Else Statements, Variables, Comments</li>
-            <li>Advanced Technical Features: Def, Tkinter, Pygame, Buttons, Master = Tk()</li>
+            <li>Advanced Technical Features: Def, Tkinter, Buttons, Master = Tk()</li>
+            <li>Won't have enough time for ascension, fixing bugs</li>
             </ul>
         </h1>
     </body>
